bk_ida/gobmkida/g3/safety_to_string
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/safety_to_string/src/engine/printutils.c:818:26: error: use of undeclared identifier 'unk_4B0989'
result = ( const char *)&unk_4B0989; 
                         ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/safety_to_string/src/engine/printutils.c:824:26: error: use of undeclared identifier 'unk_4B09A7'
result = ( const char *)&unk_4B09A7; 
                         ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/safety_to_string/src/obj/1/printutils.o] Error 1
